# stoqdrivers

./: .gitignore  .gitlab-ci.yml  .gitreview  ChangeLog  MANIFEST.in  Makefile  NEWS  README  README.md  create-release.sh  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  setup_old.py  stoqdrivers.spec
.tx/: config
debian/: changelog  clean  control  pydist-overrides  rules  watch
docs/: fiscal-driver-template.py
docs/examples/: fiscal.py
po/: es_ES.po  pt_BR.po  stoqdrivers.pot
stoqdrivers/: __init__.py  abicomp.py  base.py  configparser.py  constants.py  enum.py  escp.py  escpos.py  exceptions.py  interfaces.py  serialbase.py  translation.py  usbbase.py  utils.py
stoqdrivers/locale/: stoqdrivers.pot
stoqdrivers/printers/: base.py  capabilities.py  cheque.py  fiscal.py  nonfiscal.py
stoqdrivers/scales/: base.py  scales.py
tests/: base.py  check_ifaces_impl.py  stoqdrivers-inverteddrawer.conf  test_coupon.py  test_nonfiscal.py  test_stoqdrivers.py  test_utils.py
tests/data/: bematech-MP20-add-item.txt  bematech-MP20-add-payment.txt  bematech-MP20-cancel-coupon.txt  bematech-MP20-cancel-item.txt  bematech-MP20-cancel-last-coupon.txt  bematech-MP20-close-coupon.txt  bematech-MP20-coupon-open.txt  bematech-MP20-gerencial-report.txt  bematech-MP20-has-open-coupon.txt  bematech-MP20-payment-receipt.txt  bematech-MP20-read-memory-by-reductions.txt  bematech-MP20-read-memory.txt  bematech-MP20-sintegra.txt  bematech-MP20-summarize.txt  bematech-MP20-till-add-cash.txt  bematech-MP20-till-remove-cash.txt  (+141 more)
tools/: testdriver.py
(+31 files in other folders)
