[tool.poetry]
name = "stoqdrivers"
version = "2.0.2"
description = "Drivers for the retail sector."
authors = ["Stoq Team <dev@stoq.com>"]

[tool.poetry.dependencies]
python = "^3.5"
Pillow = ">=3.1.2"
pyserial = ">=2.2"
qrcode = "~5.3"
"zope.interface" = "^4.0"

[tool.poetry.dev-dependencies]
Babel = "^2.9.0"
nose = "^1.3.7"
nosexcover = "^1.0.11"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
